RemovableMediaCache: Thread safety++

Make sure to always lock the mutex when accesing m_metadataCache

BUG: 289897